conserto do rosa

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <select id="color">
         <option value="LightBlue">Azul</option>
         <option value="PaleGreen">Verde</option>
-        <option value="LightPink">Roso</option>
-        <option value="SlateBlues">Roxo</option>
+        <option value="LightPink">Rosa</option>
+        <option value="SlateBlue">Roxo</option>
     </select>
     <label for="day">Digite o dia:</label>
     <input type="number" id="day" min="1" max="30">
